--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+:focus {
+    outline: none;
+    text-decoration: none;
+}
 :root{
     /* Primary colors */
 
@@ -19,7 +23,7 @@
     --very-dark-blue-gnt: hsl(237, 17%, 21%);
     --Very-dark-desaturated-blue-gnt:hsl(237, 23%, 32%);
 
-    --transition: all 400ms ease-in-out;
+    --transition: all .3s ease;
 }
 *,
 *::before,
@@ -41,16 +45,6 @@ body{
 h1, h2, p{
     font-family: 'Overpass', sans-serif;
 }
-.nav{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 5em;
-    padding-inline: 1.2vw;
-}
-.nav ul{
-    display: none;
-}
 .head{
     background: url(../assets/images/bg-pattern-intro-mobile.svg) no-repeat, 
     linear-gradient(180deg, var(--very-light-red-gnt), var(--light-red-gnt));
@@ -58,7 +52,7 @@ h1, h2, p{
     background-position: 36% 35%;
     color: white;
     text-align: center;
-    height: 77vh;
+    height: 80vh;
     padding: 3em 1.5em;
     border-bottom-left-radius: 6em;
     margin-bottom: 6em;
@@ -77,14 +71,51 @@ h1, h2, p{
     font-size: clamp(1rem, 1.2rem, 2.5rem);
 }
 .logo{
-    width: 100%;
+    width: 100px;
 }
+.nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 5em;
+}
+.nav ul{
+    display: none;
+}
+/* hamburger */
+.hamburger{
+    cursor: pointer;
+}
+.bar{
+   display: block; 
+   width: 32px;
+   height: 3px;
+   background: white;
+   margin-block: 5px;
+}
+
+/*    .hamburger-animation     */
+
+.hamburger .active .bar:nth-child(2){
+    opacity: 0;
+}
+.hamburger .active .bar:nth-child(1){
+    transform: translateY(8px) rotate(45deg);
+}
+.hamburger .active .bar:nth-child(3){
+    transform: translateY(-8px) rotate(-45deg);
+}
+
+.nav-list{
+    text-align: center;
+    transition: var(--transition);
+}
+
 .call-to-actn a{
     font-family: 'Ubuntu', sans-serif;
     border-radius: 2em;
-    padding: 1.2em 1.8em;
+    padding: 1em 1.4em;
     font-weight: 600;
-    /* display: inline-block; */
 }
 .call-to-actn-1{
     color: var(--light-red);
@@ -115,7 +146,7 @@ h1, h2, p{
 .section-2{
     background: url(../assets/images/bg-pattern-circles.svg) no-repeat, linear-gradient(var(--very-dark-blue-gnt),
      var(--Very-dark-desaturated-blue-gnt)) no-repeat ;
-     background-position: 50% -760%;
+     background-position: 50% -350%;
      background-size: 160%;
      padding-block: 4em;
      border-radius: 0 6em 0 6em;
@@ -169,21 +200,27 @@ footer a{
     font-family: 'Overpass', sans-serif;
     font-size: 1.14rem;
     font-weight: 500;
-    line-height: 2.5;
+    line-height: 2;
 }
 footer a:hover, 
 footer a:active{
     text-decoration: underline;
 }
-footer ul li{
+footer li{
     list-style-type: none;
 }
-.main-footer-link{
+.main-footer__list{
+    margin-bottom: 1em;
+}
+.main-footer__link{
     font-family: 'Ubuntu', sans-serif;
-    margin-bottom: 3em;
     color: white;
 }
-@media (min-width: 760px){
+.product-link,
+.company-link{
+    margin-bottom: 2.8em;
+}
+@media (min-width:786px){
     body{
         font-size: 19px;
     }
@@ -193,14 +230,16 @@ footer ul li{
     .head{
         height: 100vh;
     }
-    .burger-menu{
+    .hamburger{
         display: none;
     }
-    
 
     /* nav styling starts here */
-
     .nav{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 5em;
         width: 80%;
         margin-inline: auto;
     }
@@ -214,31 +253,31 @@ footer ul li{
         gap: 30px;
     }
 
-    .nav-links > ul li a{
+    .nav-links .nav-item{
         font-weight: 600;
         color: hsl(240, 28%, 95%); 
         position: relative;
         padding: 1.4em;
+        transition: var(--transition);
     }
     .nav-links ul{
         display: flex;
         gap: 45px;
     }
-    .nav-links ul li { 
+    .nav-links li { 
         position: relative;
-        font-size: 1.1rem;
+        font-size: 1rem;
     }
-    .nav-links ul li a:hover{
+    .nav-links .nav-item:hover{
         text-decoration: underline;
     }
-    .nav-links ul li a i{
-        float: right;
-        margin-top: -1.156em;
+    .nav-links i{
+        padding-left: .5em;
     }
-    .nav-links ul li svg{
+    .nav-links svg{
         transition: var(--transition);
     }
-    .nav-links ul li:hover svg{
+    .nav-links li:hover svg{
         transform: rotate(180deg);
     }
 
@@ -247,7 +286,10 @@ footer ul li{
     .dropdown{
         display: none;
     }
-    .nav-links ul li:hover .dropdown{
+    .dropdown a{
+        font-weight: 200;
+    }
+    .nav-links li:hover .dropdown{
         display: inline-block;
         position: absolute;
         top: 40px;
@@ -258,21 +300,24 @@ footer ul li{
         box-shadow: 4px 4px 16px rgba(0, 0, 0, 0.2);
         width: 190px;
     }
-    .nav-links ul li:hover .dropdown ul{
+    .nav-links li:hover .dropdown ul{
         display: block;
         padding: 0em 1.1em;
         text-align: left;
     }
-    .nav-links ul li:hover .dropdown ul li a{
+    .nav-links ul li:hover .dropdown a{
         line-height: 2.5;
         padding: .68em;
         color: var(--Very-dark-desaturated-blue-gnt);
+        transition: var(--transition);
     }
-
+    .dropdown a:hover{
+        font-weight: 600;
+    }
     #btn-home{
         font-size: 1rem;
         border-radius: 2em;
-        padding: .9em 2.7em;
+        padding: 1.1em 2.2em;
         color: var(--light-red);
         background-color: white;
         transition: var(--transition);
@@ -363,6 +408,6 @@ footer ul li{
     color: var(--dark-greyish-blue);
     font-size: 1.1rem;
     text-align: center;
-    margin-top: 4em;
-    padding-bottom: 2em;
+    margin-top: 1em;
+    padding-block: 1.5em;
 }
